--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdk 32
 
@@ -32,6 +34,15 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true // add this line
+    }
+
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
 
@@ -46,5 +57,20 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "com.google.android.gms:play-services-location:$location_services_version"
+    implementation "com.google.android.libraries.places:places:2.4.0"
+
+    // 1
+    implementation "androidx.activity:activity-ktx:1.1.0"
+// 2
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+// 3
+    implementation "androidx.room:room-runtime:$room_version"
+// 4
+    kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutinesandroid:$coroutines_version"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+    implementation 'com.google.android.material:material:1.2.1'
 
 }
