--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,16 @@ buildscript {
         kotlin_version = '1.4.30'
         maps_services_version = '17.0.0'
         location_services_version = '18.0.0'
+        lifecycle_version = '2.2.0'
+        room_version = '2.2.6'
+        coroutines_version = '1.4.2'
     }
 }
 
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.0' apply false
 }
 
