--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,10 +57,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "com.google.android.gms:play-services-location:$location_services_version"
-    implementation "com.google.android.libraries.places:places:2.4.0"
+    implementation "com.google.android.libraries.places:places:2.6.0"
 
     // 1
-    implementation "androidx.activity:activity-ktx:1.1.0"
+    implementation "androidx.activity:activity-ktx:1.4.0"
 // 2
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 // 3
@@ -69,8 +69,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutinesandroid:$coroutines_version"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation 'com.google.android.material:material:1.5.0'
 
 }
